# networking-game-raylib

./: CMakeLists.txt  README.md  config.ini  profile.ini
.github/workflows/: build.yml
src/client/: CMakeLists.txt  enet_wrapper.c  enet_wrapper.h  raylib_game.c  raylib_helpers.h  screen_connecting.c  screen_gameplay.c  screen_networking.c  screen_title.c  screens.h
src/networking/: networking.c  networking.h
src/profiles/: player_profile.c  player_profile.h
src/server/: CMakeLists.txt  config.c  config.h  game_logic.c  game_logic.h  server.c
src/uuid_wrapper/: uuid_wrapper.c  uuid_wrapper.h
